--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "element-ui": "^2.13.2",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.18",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
